Edited wiki page HowTo through web user interface.

--- a/wiki/HowTo.wiki
+++ b/wiki/HowTo.wiki
@@ -1,9 +1,14 @@
 #summary Guida alla configurazione del progetto
 
 ===Disclaimer===
-Il progetto è stato sviluppato e testato *solo* su piattaforma Windows x64, pertanto non è garantito che funzioni su altre piattaforme.
+Il progetto è stato sviluppato e testato *solo* su piattaforma Windows 7 x64, pertanto non è garantito che funzioni su altre piattaforme.
 
 ==Istruzioni==
 
-  * _caso x86_:[https://code.google.com/p/monitor1213/source/browse/trunk/Monitor1213/libs/CLIPSJNI.dll CLIPSJNI.dll x64]
-  * _caso x64_:[https://code.google.com/p/xclipsjni/source/browse/trunk/XCLIPSJNI/CLIPSJNI/CLIPSJNI.dll CLIPSJNI.dll x86]
+Recuperare il file corrispondente alla versione del sistema operativo utilizzato:
+  * _caso x64_:[https://code.google.com/p/monitor1213/source/browse/trunk/Monitor1213/libs/CLIPSJNI.dll CLIPSJNI.dll x64]
+  * _caso x86_:[https://code.google.com/p/xclipsjni/source/browse/trunk/XCLIPSJNI/CLIPSJNI/CLIPSJNI.dll CLIPSJNI.dll x86]
+
+e copiarlo nella cartella C:\Windows\System32.
+[Se è stato modificato il java.library.path, si può recuperarlo con il metodo:
+{{{System.getProperty("java.library.path");}}}
