Edited wiki page HowTo through web user interface.

--- a/wiki/HowTo.wiki
+++ b/wiki/HowTo.wiki
@@ -2,6 +2,8 @@
 
 ===Disclaimer===
 Il progetto è stato sviluppato e testato *solo* su piattaforma Windows 7 x64, pertanto non è garantito che funzioni su altre piattaforme.
+===Versione di NetBeans consigliata===
+[http://www.oracle.com/technetwork/java/javase/downloads/jdk-7-netbeans-download-432126.html NetBeans + JDK]
 
 ==Istruzioni==
 
@@ -10,5 +12,6 @@ Recuperare il file corrispondente alla versione del sistema operativo utilizzato
   * _caso x86_:[https://code.google.com/p/xclipsjni/source/browse/trunk/XCLIPSJNI/CLIPSJNI/CLIPSJNI.dll CLIPSJNI.dll x86]
 
 e copiarlo nella cartella C:\Windows\System32.
-[Se è stato modificato il java.library.path, si può recuperarlo con il metodo:
-{{{	System.getProperty("java.library.path");}}}
+[Se è stato modificato il java.library.path, si può recuperarlo con il metodo: {{{System.getProperty("java.library.path");}}}]
+
+A questo punto è possibile effettuare checkout della versione corrente del progetto da NetBeans.
