--- a/wiki/HowTo.wiki
+++ b/wiki/HowTo.wiki
@@ -1,8 +1,8 @@
 #summary Guida alla configurazione del progetto
 
-===Disclaimer===
+==Disclaimer==
 Il progetto è stato sviluppato e testato *solo* su piattaforma Windows 7 x64, pertanto non è garantito che funzioni su altre piattaforme.
-===Versione di NetBeans consigliata===
+===Versione di Netbeans consigliata===
 [http://www.oracle.com/technetwork/java/javase/downloads/jdk-7-netbeans-download-432126.html Netbeans + JDK]
 
 ==Istruzioni==
