Edited wiki page HowTo through web user interface.

--- a/wiki/HowTo.wiki
+++ b/wiki/HowTo.wiki
@@ -16,4 +16,4 @@ e copiarlo nella cartella nel java.library.path (di default è C:\Windows\System
 Se è stato modificato il java.library.path, si può recuperarlo con il metodo:
 {{{System.getProperty("java.library.path");}}}
 
-A questo punto è possibile effettuare checkout della versione corrente del progetto da NetBeans.
+A questo punto è possibile effettuare checkout della versione corrente del progetto da Netbeans.
